# TripPlanner

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
doc/: architecture.md  deploymentplan.md  edgeCase.md  implementation.md
scripts/: quality_report.py
src/: main.py
src/agents/: __init__.py  accommodation.py  budget.py  critic.py  destination.py  intent.py  itinerary.py  transport.py
src/llm/: __init__.py  client.py
src/observability/: __init__.py  tracer.py
src/orchestrator/: __init__.py  graph.py  trip_context.py
src/schemas/: __init__.py  budget.py  common.py  critic.py  itinerary.py  poi.py  stay.py  transport.py  trip_brief.py
src/tools/: __init__.py  currency.py  geo.py  place_details.py  transport_lookup.py  web_search.py
src/tools/data/: currency_rates.json  transport_routes.json
src/ui/: __init__.py  cli.py  streamlit_app.py
tests/: conftest.py
tests/fixtures/: sample_requests.json
tests/phase0/: test_smoke.py
tests/phase1/: test_schemas.py
tests/phase2/: test_intent.py  test_intent_live.py
tests/phase3/: test_itinerary.py  test_itinerary_live.py
tests/phase4/: test_specialists.py  test_specialists_live.py
tests/phase5/: test_critic.py  test_critic_live.py
tests/phase6/: test_integration.py  test_tools.py
tests/phase7/: test_ui.py  test_ui_live.py
tests/phase8/: test_quality_live.py  test_quality_report.py
