[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trip-planner-multi-agent"
version = "0.1.0"
description = "Travel Planning Multi-Agent System — turns a natural-language travel request into a validated trip plan."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Palash Bhagat" }]
dependencies = [
    "google-genai>=1.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
ui = [
    "streamlit>=1.32",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "live: tests that hit the real LLM API (require RUN_LIVE=1)",
]
addopts = "-q"
